src/index.css
@font-face {
  font-family: Larken-Thin;
  src: url("./fonts/fonnts.com-Larken_Thin.otf") format("truetype");
}

@font-face {
  font-family: Larken-Extra-Bold;
  src: url("./fonts/fonnts.com-Larken_ExtraBold.otf") format("truetype");
}

@font-face {
  font-family: Larken-Medium;
  src: url("./fonts/fonnts.com-Larken_Medium.otf") format("truetype");
}

body {
  background-color: black;
  color: white;
  padding: 0;
  margin: 0;
  font-family: Larken-Thin, sans-serif;
  cursor: url('./assets/cursor.png') 12 12, auto;
}

a, button, .clickable {
  cursor: url('./assets/cursor.png') 12 12, pointer;
}

